# sapphire

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
age/engine/: CMakeLists.txt  main.cpp
age/engine/assets/: asset_loader.cpp  asset_loader.h  mesh_asset.h  shader_asset.cpp  shader_asset.h  static_mesh_asset.cpp  static_mesh_asset.h
age/engine/assets/loaders/: mesh_loader.cpp  mesh_loader.h  mmdl_loader.cpp  mmdl_loader.h  obj_loader.cpp  obj_loader.h
age/engine/data/: aabb.cpp  aabb.h  color.cpp  color.h
age/engine/rendering/: mesh_buffer.h  render_server.cpp  render_server.h  render_target.h  rt_sdl_window.cpp  rt_sdl_window.h
age/rs_opengl4/: CMakeLists.txt  rs_opengl4.cpp  rs_opengl4.h
age/rs_opengl4/assets/: glsl_shader_asset.cpp  glsl_shader_asset.h  glsl_shader_asset_loader.cpp  glsl_shader_asset_loader.h
age/rs_opengl4/preludes/: frag_prelude.glsl  vertex_prelude.glsl
age/rs_opengl4/rendering/: opengl4_render_server.cpp  opengl4_render_server.h
age/rs_opengl4/shaders/: error.glsl
engine/: CMakeLists.txt  engine.cpp  engine.hpp  window.cpp  window.hpp
engine/data/: size_tools.cpp
engine/graphics/: memory_block.cpp  mesh_buffer.cpp  pipeline.cpp  render_pass.cpp  render_pass.hpp  render_target.cpp  render_target.hpp  shader.cpp  vulkan_provider.cpp  vulkan_provider.hpp
engine/graphics/targets/: window_render_target.cpp  window_render_target.hpp
engine/world/: transform.cpp
sapphire/engine/: CMakeLists.txt  engine.cpp  engine.h  engine.hpp  main.cpp  resources.rc
sapphire/engine/assets/: asset.cpp  asset.h  asset.hpp  asset_loader.cpp  asset_loader.h  asset_loader.hpp  material_asset.cpp  material_asset.h  material_asset.hpp  mesh_asset.cpp  mesh_asset.h  mesh_asset.hpp  shader_asset.h  static_mesh_asset.cpp  static_mesh_asset.h  static_mesh_asset.hpp  texture_asset.cpp  texture_asset.h  texture_asset.hpp
sapphire/engine/assets/loaders/: material_loader.cpp  material_loader.h  material_loader.hpp  mesh_loader.cpp  mesh_loader.h  mesh_loader.hpp  mmdl_loader.h  obj_loader.cpp  obj_loader.h  semd_loader.cpp  semd_loader.h  stb_image_loader.cpp  stb_image_loader.h  texture_loader.cpp  texture_loader.hpp
sapphire/engine/config/: config_file.cpp  config_file.h
sapphire/engine/console/: console.cpp  console.h  console.hpp  console_stream.cpp  console_stream.h  console_stream.hpp
sapphire/engine/data/: aabb.h  color.h  string_tools.cpp  string_tools.h  timing.h  transform.cpp  transform.h
sapphire/engine/editor/: editor.cpp  editor.h  editor.hpp
sapphire/engine/editor/data/: editor_config.cpp  editor_config.h  editor_config.hpp  project.cpp  project.h  project.hpp
sapphire/engine/editor/panels/: actor_panel.cpp  actor_panel.h  actor_panel.hpp  asset_panel.cpp  asset_panel.h  asset_panel.hpp  assets_panel.cpp  assets_panel.h  console_panel.cpp  panel.h  (+17 more)
sapphire/engine/math/: angle_math.cpp  angle_math.hpp
sapphire/engine/panels/: panel.cpp  panel.h  world_actor_panel.cpp  world_actor_panel.h
sapphire/engine/rendering/: camera_data.cpp  camera_data.h  graphics_buffer.cpp  graphics_buffer.h  material.cpp  material.h  material.hpp  mesh_buffer.cpp  mesh_buffer.h  object_buffer.cpp  object_buffer.h  render_server.cpp  render_server.h  render_server.hpp  render_target.cpp  render_target.h  render_target.hpp  render_target_data.cpp  render_target_data.h  render_target_data.hpp  rt_sdl_window.cpp  rt_sdl_window.h  sdl_window_render_target.cpp  sdl_window_render_target.h  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.h  texture.hpp  texture_render_target.cpp  texture_render_target.h  view_buffer.cpp  view_buffer.h  window.cpp  window.hpp  window_render_target.cpp  window_render_target.h
sapphire/engine/scene/: actor.cpp  actor.h  actor.hpp  mesh_actor.cpp  mesh_actor.h  mesh_actor.hpp  transform.cpp  transform.h  transform.hpp  universe.cpp  universe.hpp  world.cpp  world.h  world.hpp
sapphire/engine/tasks/: worker_pool.cpp  worker_pool.hpp
sapphire/engine/typing/: class_registry.cpp  class_registry.h  class_registry.hpp  hash_functions.h  hash_functions.hpp  reflect_macros.h  reflect_macros.hpp
sapphire/rs_opengl4/: CMakeLists.txt
sapphire/rs_opengl4/assets/: glsl_shader_asset.cpp  glsl_shader_asset.h  glsl_shader_asset_loader.cpp  glsl_shader_asset_loader.h
sapphire/rs_opengl4/preludes/: frag_prelude.glsl  vert_prelude.glsl
sapphire/rs_opengl4/rendering/: opengl4_graphics_buffer.h  opengl4_material.cpp  opengl4_material.h  opengl4_mesh_buffer.cpp  opengl4_mesh_buffer.h  opengl4_render_server.cpp  opengl4_render_server.h  opengl4_render_target_data.cpp  opengl4_render_target_data.h  opengl4_shader.cpp  opengl4_shader.h  opengl4_texture.cpp  opengl4_texture.h
sapphire/rs_vulkan/: CMakeLists.txt
sapphire/rs_vulkan/assets/: vulkan_shader_asset.cpp  vulkan_shader_asset.h  vulkan_shader_asset_loader.cpp  vulkan_shader_asset_loader.h
sapphire/rs_vulkan/preludes/: frag_prelude.glsl  vert_prelude.glsl
sapphire/rs_vulkan/rendering/: vulkan_graphics_buffer.cpp  vulkan_graphics_buffer.h  vulkan_material.cpp  vulkan_material.h  vulkan_mesh_buffer.cpp  vulkan_mesh_buffer.h  vulkan_render_server.cpp  vulkan_render_server.h  vulkan_render_target_backing.cpp  vulkan_render_target_backing.h  vulkan_render_target_data.cpp  vulkan_render_target_data.h  vulkan_shader.cpp  vulkan_shader.h  vulkan_texture.cpp  vulkan_texture.h
sapphire/rs_vulkan/shaders/: error.glsl
sapphire/rs_vulkan/val/: README.md  val_buffer.cpp  val_buffer.h  val_extension.cpp  val_extension.h  val_instance.cpp  val_instance.h  val_layer.cpp  val_layer.h  val_queue.cpp  val_queue.h  val_releasable.cpp  val_releasable.h  val_stagingbuffer.cpp  val_stagingbuffer.h  val_window.cpp  val_window.h
source/engine/: CMakeLists.txt  engine.cpp  engine.hpp  window.cpp  window.hpp
source/engine/data/: size_tools.hpp
source/engine/graphics/: memory_block.hpp  mesh_buffer.hpp  pipeline.cpp  pipeline.hpp  provider_releasable.cpp  provider_releasable.hpp  render_pass.hpp  render_target.hpp  shader.cpp  shader.hpp
source/engine/world/: transform.hpp
(+124 files in other folders)
